--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "@adonisjs/view",
       "@adonisjs/shield",
       "@japa/preset-adonis/build/adonis-typings"
-    ]
+    ],
+    "noUnusedLocals": false
   }
 }
